Fix fee-info centering on Firefox

--- a/src/styles/popup/view/fees.less
+++ b/src/styles/popup/view/fees.less
@@ -71,6 +71,7 @@
                 height: 100%;
                 display: flex;
                 flex-direction: column;
+                justify-content: center;
 
                 text-align: right;
                 font-size: 12px;
